--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "pdf2json": "^3.0.3",
+    "terser": "^5.18.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
